--- a/template/facebook/demo.html
+++ b/template/facebook/demo.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Facebook iOS home screen App demo</title>
+
+  % # https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html
+  <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
   <a class="fb-connect iframe" href="#">connect via iframe</a>
@@ -14,6 +17,9 @@
 
   <script>
     (function init(connect, iframe) {
+      var standalone = "standalone" in window.navigator
+      var fullscreen = standalone && window.navigator.standalone;
+
       var connect = document.querySelectorAll(".fb-connect"), i;
       for(i = 0; i < connect.length; ++i) {
         connect[i].addEventListener("click", function(event) {
@@ -25,6 +31,8 @@
             iframe.src = "http://a.issue-social.dev/facebook/auth";
             document.body.appendChild(iframe);
           } else if (classList.contains("popup")) {
+
+
             window.open("http://a.issue-social.dev/facebook/auth");
           }
         });
